--- a/src/main/webapp/resources/assets/js/admin/smarteditor2-master/workspace/static/css/zh_CN/smart_editor2_in.css
+++ b/src/main/webapp/resources/assets/js/admin/smarteditor2-master/workspace/static/css/zh_CN/smart_editor2_in.css
@@ -13,7 +13,7 @@ body,.se2_inputarea{margin:0;padding:0;font-family:'돋움',Dotum,Helvetica,Sans
 }
 /* TEXT_TOOLBAR : QUOTE */
 .se2_quote1{margin:0 0 30px 20px;padding:0 8px;border-left:2px solid #ccc;color:#888}
-.se2_quote2{margin:0 0 30px 13px;padding:0 8px 0 16px;background:url("../resources/assets/images/admin/bg_quote2.gif") 0 3px no-repeat;color:#888}
+.se2_quote2{margin:0 0 30px 13px;padding:0 8px 0 16px;background:url("../../img/bg_quote2.gif") 0 3px no-repeat;color:#888}
 .se2_quote3{margin:0 0 30px;padding:12px 10px 11px;border:1px dashed #ccc;color:#888}
 .se2_quote4{margin:0 0 30px;padding:12px 10px 11px;border:1px dashed #66b246;color:#888}
 .se2_quote5{margin:0 0 30px;padding:12px 10px 11px;border:1px dashed #ccc;background:#fafafa;color:#888}
